--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -120,5 +120,8 @@
             border-radius: 3px;
             cursor: pointer;
         }
+        &-mobile {
+            display: none;
+        }
     }
 }
